--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="img_annot.js" type="text/javascript"></script>
+    <script src="data_management.js" type="text/javascript"></script>
   </head>
   <body>
     <img src="sample.jpg" class="add-annotate"  />
